--- a/client/src/components/Image/ImageList.module.css
+++ b/client/src/components/Image/ImageList.module.css
@@ -7,5 +7,11 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 2rem;
+    row-gap: 2rem;
     /* grid-template-rows: fit-content */
+}
+.column_grid {
+    display: grid;
+    row-gap: 2rem;
+    height: fit-content;
 }
