--- a/client/src/components/Image/ImageList.module.css
+++ b/client/src/components/Image/ImageList.module.css
@@ -2,7 +2,7 @@
     max-width: 1320px;
     background-color: grey;
 }
-.grid {
+.top_grid {
     border: 1px solid yellow;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
