--- a/client/src/components/UploadForm.module.css
+++ b/client/src/components/UploadForm.module.css
@@ -19,7 +19,9 @@
   max-width: 850px;
   max-height: 700px;
   background-color: white;
-  padding: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 10px;
   border-radius: 20px;
   flex-direction: column;
 }
@@ -38,6 +40,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 /* 텍스트 폼을 감싸고 있는 전체 부분 */
@@ -55,22 +58,27 @@
 /* 닫기 버튼 */
 .close_button {
   position: relative;
-  left: 800px;
-  padding: 6px;
+  left: 830px;
   height: 30px;
   width: 50px;
   border-radius: 10px;
   cursor: pointer;
   border: none;
+  background-color: transparent;
+  font-size: 1.5rem;
+  color: black;
 }
 
 /* 게시하기 제출 버튼 */
 .submit_button {
-position: relative;
-top: 600px;
-  padding: 6px;
+  position: relative;
+  font-size: 1rem;
+  font-weight: 500;
+  top: 50px;
+  left: 770px;
+  padding: 8px;
   height: 40px;
-  width: 120px;
+  width: 90px;
   background-color: #d9f2d8;
   border-radius: 10px;
   cursor: pointer;
@@ -88,7 +96,21 @@ top: 600px;
     width: 100%;
     height: 100%;
     cursor: pointer;
-    margin-top: 50px;
+    margin-top: 40px;
+    position: relative;
+}
+
+.delete_button {
+    position: absolute;
+    top: 8px;
+    right: 5px;
+    background-color: transparent;
+    border: none;
+    padding: 4px;
+    cursor: pointer;
+    color: black;
+    font-size: 1.5rem;
+    z-index: 1;
 }
   
 .image_upload_label .image_placeholder {
