--- a/client/src/components/Image/ImageItem.module.css
+++ b/client/src/components/Image/ImageItem.module.css
@@ -22,7 +22,7 @@
     display: flex;
     position: relative;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     position: absolute;
     bottom: 0;
     left: 0;
