--- a/client/src/components/MyPage/BookmarkFolder.module.css
+++ b/client/src/components/MyPage/BookmarkFolder.module.css
@@ -5,6 +5,10 @@
 
 }
 
+.buttons {
+    display: flex;
+}
+
 .folder_container {
     display: grid;
     justify-content: center;
@@ -103,7 +107,7 @@ ul {
   width: 100%;
   height: 100%; 
   object-fit: cover;
-  object-position: center top; /* 이미지 중앙에서 위쪽으로 자르도록 설정 */
+  object-position: center top;
 }
 
 .thumbnail_2 img {
