--- a/client/src/pages/SignupPage.css
+++ b/client/src/pages/SignupPage.css
@@ -1,4 +1,4 @@
-body,
+/* body,
 html {
   height: 100%;
   margin: 0;
@@ -6,7 +6,7 @@ html {
   justify-content: center;
   align-items: center;
   background-color: #f5f5f5;
-}
+} */
 
 .Signup_Wrapper {
     text-align: center;
