--- a/client/src/components/PostDetail/PostDetail.module.css
+++ b/client/src/components/PostDetail/PostDetail.module.css
@@ -14,10 +14,10 @@
   /* 모달 컨테이너 */
   .modal_content {
     display: flex;
-    width: 100%;
+    width: 80%;
     height: 100%;
-    max-width: 500px;
-    max-height: 760px;
+    max-width: 35%;
+    max-height: 90%;
     background-color: white;
     padding-left: 30px;
     padding-right: 30px;
@@ -32,7 +32,7 @@
 
 
   .image {
-    max-width: 60%; /* 이미지 최대 너비 */
+    max-width: 45%; /* 이미지 최대 너비 */
     height: 40%; /* 자동 높이 조정 */
   }
 
@@ -41,30 +41,113 @@
     height: 30px;
   }
 
+  .postTitle {
+    font-size: 1rem;
+  }
+
   .tags {
     margin-top: 0;
+    font-size: 0.8rem;
+  }
+
+  .postAddress {
+    font-size: 0.8rem;
+  }
+
+  .createdAt {
+    font-size: 0.7rem;
   }
 
   .username {
     margin-left: 20px;
     width: 150px;
     height: 20px;
+    font-size: 0.7rem;
   }
 
   .userInfo {
     display: flex;
   }
 
+  .postCaption {
+    font-size: 0.7rem;
+  }
+
   /* 수정 버튼 스타일 */
-.edit_button {
+/* .edit_button {
   position: relative;
-  left: 110px;
-  bottom: 150px;
-  font-size: 1rem;
+  left: 11rem;
+  bottom: 8rem;
+  font-size: 0.7rem;
   font-weight: 500;
   padding: 8px;
-  height: 40px;
-  width: 90px;
+  height: 2rem;
+  width: 5rem;
+  background-color: #d9f2d8;
+  border-radius: 10px;
+  cursor: pointer;
+  border: none;
+} */
+
+/* 삭제 버튼 스타일 */
+/* .delete_button {
+  position: relative;
+  left: 6rem;
+  bottom: 10.5rem;
+  font-size: 0.7rem;
+  font-weight: 500;
+  padding: 8px;
+  height: 2rem;
+  width: 5rem;
+  background-color: #d9f2d8;
+  border-radius: 10px;
+  cursor: pointer;
+  border: none;
+} */
+
+
+/* 닫기 버튼 */
+/* .close_button {
+  position: absolute;
+  left: 34rem;
+  bottom: 18rem;
+  height: 30px;
+  width: 50px;
+  border-radius: 10px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  font-size: 1rem;
+  color: black;
+} */
+
+.profileIcon {
+  padding-top: 10px;
+}
+
+/* 닫기 버튼 */
+.close_button {
+  position: relative;
+  left: 33rem;
+  bottom: 20rem;
+  border-radius: 10px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  font-size: 1rem;
+  color: black;
+}
+
+/* 수정 버튼 스타일 */
+.edit_button {
+  position: relative;
+  left: 8rem;
+  bottom: 8rem;
+  font-size: 0.7rem;
+  font-weight: 500;
+  padding: 8px;
+  height: 2rem;
+  width: 5rem;
   background-color: #d9f2d8;
   border-radius: 10px;
   cursor: pointer;
@@ -74,35 +157,25 @@
 /* 삭제 버튼 스타일 */
 .delete_button {
   position: relative;
-  left: 20px;
-  bottom: 200px;
-  font-size: 1rem;
+  left: 3rem;
+  bottom: 11rem;
+  font-size: 0.7rem;
   font-weight: 500;
   padding: 8px;
-  height: 40px;
-  width: 90px;
+  height: 2rem;
+  width: 5rem;
   background-color: #d9f2d8;
   border-radius: 10px;
   cursor: pointer;
   border: none;
 }
 
-
-/* 닫기 버튼 */
-.close_button {
-  position: relative;
-  left: 550px;
-  bottom: 350px;
-  height: 30px;
-  width: 50px;
-  border-radius: 10px;
-  cursor: pointer;
-  border: none;
-  background-color: transparent;
-  font-size: 1.5rem;
-  color: black;
-}
-
-.profileIcon {
-  padding-top: 10px;
+@media (max-width: 500px) {
+  /* 화면 너비가 768px 이하일 때 버튼 위치 조정 */
+  .edit_button {
+    left: 40rem;
+  }
+  .delete_button {
+    right: 10px;
+  }
 }
