--- a/client/src/components/UploadModal/UploadForm.module.css
+++ b/client/src/components/UploadModal/UploadForm.module.css
@@ -15,9 +15,9 @@
 .modal_content {
   display: flex;
   width: 100%;
-  height: 90%;
-  max-width: 850px;
-  max-height: 800px;
+  height: 100%;
+  max-width: 50%;
+  max-height: 90%;
   background-color: white;
   padding-left: 30px;
   padding-right: 30px;
@@ -58,9 +58,7 @@
 /* 닫기 버튼 */
 .close_button {
   position: relative;
-  left: 830px;
-  height: 30px;
-  width: 50px;
+  left: 23rem;
   border-radius: 10px;
   cursor: pointer;
   border: none;
@@ -74,8 +72,8 @@
   position: relative;
   font-size: 1rem;
   font-weight: 500;
-  top: 50px;
-  left: 770px;
+  top: 1rem;
+  left: 39rem;
   padding: 8px;
   height: 40px;
   width: 90px;
@@ -96,7 +94,6 @@
     width: 100%;
     height: 100%;
     cursor: pointer;
-    margin-top: 40px;
     position: relative;
 }
 
@@ -117,7 +114,7 @@
     position: relative;
     color: #a7a7a7;
     opacity: 1;
-    font-size: 20px;
+    font-size: 1rem;
     text-align: center;
 }
   
@@ -132,7 +129,7 @@
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.7); /* Overlay 배경색 및 투명도 조절 */
     color: #fff; /* 텍스트 색상 */
-    font-size: 16px; /* 텍스트 크기 */
+    font-size: 1rem; /* 텍스트 크기 */
     font-weight: bold; /* 텍스트 굵기 */
     cursor: pointer;
     opacity: 0; /* 처음에는 투명하게 설정 */
@@ -179,7 +176,7 @@
     width: 100%;
     outline: none;
     border: none;
-    font-size: 25px;
+    font-size: 1rem;
     border: none; /* 기본 테두리 제거 */
     border-bottom: 1px solid black; /* 원하는 선 스타일 설정 */
     margin-bottom: 10px; /* 아래 여백 설정 */
@@ -193,7 +190,7 @@
   margin-top: 60px;
   outline: none;
   border: none;
-  font-size: 25px;
+  font-size: 1rem;
   border: none; /* 기본 테두리 제거 */
     border-bottom: 1px solid black; /* 원하는 선 스타일 설정 */
     margin-bottom: 10px;
@@ -238,7 +235,7 @@
   justify-content: center;
   color: rgb(1, 186, 138);
   padding: 0 8px;
-  font-size: 14px;
+  font-size: 1rem;
   list-style: none;
   border-radius: 6px;
   margin: 0 8px 8px 0;
@@ -252,7 +249,7 @@
   height: 16px;
   line-height: 16px;
   text-align: center;
-  font-size: 14px;
+  font-size: 1rem;
   margin-left: 8px;
   color: rgb(1, 186, 138);
   border-radius: 50%;
@@ -265,30 +262,29 @@
   outline: none;
   border: none;
   height: 46px;
-  font-size: 14px;
+  font-size: 1rem;
 }
 
 ::placeholder {
   color: #a7a7a7;
   opacity: 1;
-  font-size: 20px;
+  font-size: 1rem;
 }
 
 .tag_input::placeholder {
-  font-size: 15px;
+  font-size: 1rem;
 }
 
 /* CSS 파일 또는 스타일 컴포넌트에 추가 */
 .checkbox {
   display: flex;
   align-items: center;
-  font-size: 20px; /* 텍스트 크기 조절 */
-  margin-bottom: 5px;
+  font-size: 0.8rem; /* 텍스트 크기 조절 */
 }
 
 .checkbox input[type="checkbox"] {
-  width: 20px; /* 체크박스의 가로 크기 조절 */
-  height: 20px; /* 체크박스의 세로 크기 조절 */
+  width: 1rem; /* 체크박스의 가로 크기 조절 */
+  height: 0.8rem; /* 체크박스의 세로 크기 조절 */
   margin-right: 8px; /* 체크박스와 텍스트 사이 여백 조절 */
 }
 
