최종세부수정

--- a/client/src/components/PostDetail/PostDetail.module.css
+++ b/client/src/components/PostDetail/PostDetail.module.css
@@ -32,8 +32,8 @@
 
 
   .image {
-    max-width: 45%; /* 이미지 최대 너비 */
-    height: 40%; /* 자동 높이 조정 */
+    max-width: 60%; /* 이미지 최대 너비 */
+    height: 50%; /* 자동 높이 조정 */
   }
 
   .profileImage {
@@ -43,19 +43,23 @@
 
   .postTitle {
     font-size: 1rem;
+    margin-bottom: 1rem;
   }
 
   .tags {
-    margin-top: 0;
+    margin-top: 0.8rem;
+    margin-bottom: 1rem;
     font-size: 0.8rem;
   }
 
   .postAddress {
     font-size: 0.8rem;
+    margin-bottom: 0.8rem;
   }
 
   .createdAt {
     font-size: 0.7rem;
+    margin-bottom: 0.5rem;
   }
 
   .username {
@@ -63,6 +67,7 @@
     width: 150px;
     height: 20px;
     font-size: 0.7rem;
+    margin-top: 0.3rem;
   }
 
   .userInfo {
@@ -71,10 +76,11 @@
 
   .postCaption {
     font-size: 0.7rem;
+    margin-bottom: 0.5rem;
   }
 
 .profileIcon {
-  padding-top: 10px;
+  margin-bottom: 10px;
 }
 
 /* 닫기 버튼 */
@@ -92,9 +98,9 @@
 
 /* 수정 버튼 스타일 */
 .edit_button {
-  position: relative;
-  left: 8rem;
-  bottom: 8rem;
+  position: fixed;
+  left: 55rem;
+  bottom: 35rem;
   font-size: 0.7rem;
   font-weight: 500;
   padding: 8px;
@@ -108,9 +114,9 @@
 
 /* 삭제 버튼 스타일 */
 .delete_button {
-  position: relative;
-  left: 3rem;
-  bottom: 11rem;
+  position: fixed;
+  left: 55rem;
+  bottom: 31rem;
   font-size: 0.7rem;
   font-weight: 500;
   padding: 8px;
