--- a/client/src/components/UserFind.css
+++ b/client/src/components/UserFind.css
@@ -10,12 +10,15 @@
     border: 1px solid #ccc;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000; /* 팝업이 위에 표시되도록 설정 */
+    display: flex; /* 내용물을 수직 가운데 정렬하기 위해 flex 사용 */
+    flex-direction: column; /* 내용물을 수직으로 정렬하기 위해 column 방향 설정 */
+    align-items: center; /* 내용물을 수직 가운데 정렬 */
 }
 
 .inputprofile {
     border: 2px solid #d9d9d9;
     width: 280px;
-    height: 5.5vh;
+    height: 50px;
     margin-bottom: 5px;
 }
 
@@ -23,7 +26,7 @@
     border: 2px solid #d9d9d9;
     border-radius: 5px;
     width: 250px;
-    height: 5.5vh;
+    height: 50px;
     color: white;
     background-color: #0a95ff;
     font: Inter;
@@ -36,7 +39,7 @@
     border: 2px solid #d9d9d9;
     border-radius: 5px;
     width: 250px;
-    height: 5.5vh;
+    height: 50px;
     color: white;
     background-color: #fd6644;
     font: Inter;
