--- a/client/src/pages/App.module.css
+++ b/client/src/pages/App.module.css
@@ -46,3 +46,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700&display=swap');
+html{
+	font-family: 'Nanum Gothic', sans-serif;
+}
