--- a/client/src/pages/LoginPage.module.css
+++ b/client/src/pages/LoginPage.module.css
@@ -1,3 +1,7 @@
+.app_container{
+    background-image: url("../assets/image/loginBg.jpg");
+}
+
 .app_container, .Signup_Wrapper{
     width: 100%;
     height: 100vh;
