--- a/client/src/pages/SignupPage.css
+++ b/client/src/pages/SignupPage.css
@@ -104,8 +104,18 @@
 
 .warn_inputEmail_message {
     display: none;
-    height: 28px;
-    margin-top: -6px;
+    height: 20px;
+    margin-top: -2px;
+    font-weight: 700;
+    letter-spacing: -.6px;
+    text-align: left;
+    color: #ff6060;
+}
+
+.warn_inputName_message {
+    display: none;
+    height: 20px;
+    margin-top: -2px;
     font-weight: 700;
     letter-spacing: -.6px;
     text-align: left;
@@ -114,8 +124,8 @@
 
 .warn_inputPassword_message {
     display: none;
-    height: 28px;
-    margin-top: -6px;
+    height: 20px;
+    margin-top: -2px;
     font-weight: 700;
     letter-spacing: -.6px;
     text-align: left;
@@ -124,7 +134,7 @@
 
 .warn_login_message {
     height: 28px;
-    margin-top: -6px;
+    margin-top: -2px;
     font-weight: 700;
     letter-spacing: -.6px;
     text-align: left;
