--- a/client/src/components/Common/Header.module.css
+++ b/client/src/components/Common/Header.module.css
@@ -7,6 +7,7 @@
     width: 100vw;
     height: 64px;
     font-size: 1.5rem;
+    white-space: nowrap;
 }
 .container {
     justify-content: space-between;
@@ -14,7 +15,6 @@
     margin: 0 4rem;
     width: calc(100% - 8rem);
     height: 100%;
-    
 }
 
 .left, .right {
