--- a/client/src/components/Comment/CommentComponent.module.css
+++ b/client/src/components/Comment/CommentComponent.module.css
@@ -29,10 +29,19 @@ li {
     width: 10rem;
     font-size: 0.7rem;
     font-weight: 100;
+    margin-right: 1rem;
 }
 
 .commentList {
     margin-left: 0;
+}
+
+.commentBox {
+    border: gray solid 1px;
+    border-radius: 5px;
+    width: 90%;
+    padding: 0.5rem;
+    margin: 0.1rem;
 }
 
 .commentText {
@@ -53,6 +62,12 @@ li {
     width: 5rem;
     height: 2rem;
 }
+
+.addBtn:hover{
+    color: #378659;
+    font-weight: 700;
+  }
+  
 
 .commentInput {
     border-top: none;
@@ -79,7 +94,7 @@ li {
     font-size: 0.7rem;
     font-weight: normal;
     padding-top: 10px;
-    width: 120px;
+    width: 50px;
 }
 
 ::placeholder {
