--- a/client/src/components/PostDetail/PostDetail.module.css
+++ b/client/src/components/PostDetail/PostDetail.module.css
@@ -14,6 +14,7 @@
   /* 모달 컨테이너 */
   .modal_content {
     display: flex;
+    overflow-y: auto;
     width: 80%;
     height: 100%;
     max-width: 35%;
@@ -119,6 +120,11 @@
   border: none;
 }
 
+.edit_button:hover{
+  color: #378659;
+  font-weight: 700;
+}
+
 /* 삭제 버튼 스타일 */
 .delete_button {
   position: absolute;
@@ -135,6 +141,11 @@
   border: none;
 }
 
+.delete_button:hover{
+  color: #378659;
+  font-weight: 700;
+}
+
 @media (max-width: 500px) {
   /* 화면 너비가 768px 이하일 때 버튼 위치 조정 */
   .edit_button {
@@ -143,4 +154,23 @@
   .delete_button {
     right: 10px;
   }
+}
+
+.complete_button {
+  position: absolute;
+  top: 30.5rem;
+  right: 0rem;
+  font-size: 0.7rem;
+  font-weight: 500;
+  padding: 3px;
+  height: 2rem;
+  width: 4rem;
+  background-color: #E2E2E2;
+  border-radius: 10px;
+  cursor: pointer;
+  border: none;
+}
+
+.complete_button:hover {
+  color: gray;
 }
